# datalayer

./: .gitattributes  .gitignore  .readthedocs.yml  Makefile  README.md  build-conda.sh  hatch_build.py  publish-conda.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation---setup.md  feature_request.md
apps/: README.md  lerna.json  package.json
apps/iam/: Dockerfile  Makefile  README.md  index.html
apps/jupyterlab/: README.md
apps/jupyterpool/: README.md
apps/jvm/: README.md
apps/kuber/: Makefile  README.md  go.mod  main.go
apps/ui/: README.md
apps/voilahub/: README.md
conda-recipe/: README.md  meta.yaml  post-link.sh  publish-conda.sh
conda-recipe/scripts/: post-link.sh
contrib/jupyterlab/: apply.sh  staging-package.diff
datalayer/: __init__.py  __version__.py  _version.py  post-install.sh
docs/: README.md
docs/blog/: Makefile  README.md  gatsby-config.js  package.json
docs/databook/: README.md  book.json  index.md
docs/datalayer/: README.md  environment.yml  requirements.txt
docs/kuber/: README.md  book.json  index.md
docs/notebook/: Makefile  README.md  index.md
docs/platform/: README.md  book.json  glossary.md  index.md
docs/source/: conf.py  index.md
etc/: README.md
etc/contrib/: README.md
etc/crossplane/: README.md
etc/datalayer/: README.md  bash_profile.template  dlarc.template  kuber.yml.template  oidc.json.template
etc/docker/: Makefile  README.md
etc/env/: README.md  datalayer-base.yml  datalayer.yml  node8.yml
etc/helm/: README.md
etc/jupyter/: README.md
etc/notebooks/: README.md
etc/seed/: README.md
etc/solr/: README.md
etc/terraform/: README.md  key.pub
etc/zookeeper/: zoo.cfg
examples/: README.md
examples/ipywidgets/: async.ipynb  interactive.ipynb  materialui.ipynb
examples/kernel/: multi.ipynb
examples/tex/: datalayer-formula.tex
examples/viz/: pyview.ipynb  seaborn.ipynb
lab/: README.md
lab/airflow/: README.md  k8s_2_dag.py  k8s_4_dag.py  test_1_dag.py  test_3_data.py
lab/apps/: README.md
lab/auth/: README.md
lab/auth-twitter/: README.md  package.json  server.sh
lab/blueprint-js/: README.md  package.json
lab/box/: README.md
lab/cla/: README.md
lab/cli/: README.md  package.json  setup.py
lab/code-split/: README.md  package.json  tslint.json
lab/codesandbox/: README.md
lab/cra-embed/: README.md
lab/css-in-js/: README.md  index.html  now.json  package.json  tsconfig.json  webpack.config.js
lab/fabric-ui/: README.md  now.json  package.json
lab/go/: Makefile  README.md  go.sum  main.go
lab/golang/: README.md  go.mod  main.go
lab/jupyter/: README.md
lab/jupyter-app/: README.md  app.py
lab/jupyter-kernel/: README.md  setup.py
lab/jupyter-kernel-mgmt/: README.md
lab/jupyter-notebooks/: README.md  simple.ipynb
lab/jupyter-server/: README.md
lab/jupyterhub-api/: README.md  index.html  jupyterhub_config.py  package.json  start-external-service.sh
lab/jupyterhub-oidc/: Makefile  README.md
lab/jupyterlab/: README.md  tsconfigbase.json
lab/jupyterlab-extensions/: README.md
lab/jupyterlab-lumino/: README.md
lab/jvm/: README.md  pom.xml
lab/k8s/: README.md
lab/keycloak/: Dockerfile  README.md
lab/kubeflow/: README.md
lab/ldap/: README.md  example-2.ldif
lab/lumino/: README.md
lab/material-ui/: lerna.json  package.json  tsconfig-base.json
lab/medias/: README.md  webpack.config.js
lab/microservices/: README.md
lab/ms-teams/: README.md
lab/mui-theme/: README.md  package.json
lab/node-js/: README.md
lab/now-sh/: README.md  package.json
lab/oauth1-twitter/: README.md  package.json  server.py
lab/open-api/: README.md  main.py  spec.yaml
lab/phosphor-js/: README.md
lab/py/: Makefile  README.md  conda.yml  setup.py
lab/python/: Makefile  README.md  conda.yml  setup.py
lab/react-boilerplate/: package.json
lab/react-hooks/: README.md
lab/react-inject/: README.md  package.json
lab/react-material-ui/: README.md
lab/react-split/: README.md
lab/react-state/: README.md
lab/sbin/: pictos-echo  spark-docker-build  spark-docker-push  spark-docker-push-local  spark-docs-serve  spark-docs-serve-fork  spark-integration-test  spark-integration-test-pre  spark-integration-test-run
lab/slack/: README.md
lab/solr/: README.md
lab/styleguidist/: package.json  tsconfig.json  webpack.config.js
lab/tornado-auth/: README.md
lab/tornado-oidc/: README.md  main.py
lab/typedoc/: README.md  package.json
lab/voila/: README.md
lab/vscode/: README.md
lab/webpack/: .eslintrc  InvokeNodeModule.java  README.md
opt/: README.md
repos/: README.md  datalayer
sbin/: R-packages-install  R-packages-install.R  README.md  about  aws-creds  blog-serve  blueprint-js-build  build  clean  clean-deep  cli  conda-activate  conda-env  dists  dists-clean  dists-pull  dists-push  dla-conda  docker-install  docker-prune  docs-serve  dsp-backup  dsp-clean  dsp-docker  dsp-docker-build  dsp-docker-images  dsp-docker-pull  dsp-docker-push  dsp-docker-push-local  dsp-down  dsp-helm-build  dsp-k8s-down  dsp-k8s-ls  dsp-k8s-reup  dsp-k8s-up  dsp-keycloak-init  dsp-ldap-add  dsp-ldap-backup  dsp-ldap-backup.py  dsp-ldap-help  (+178 more)
src/: .dockerignore  .eslintrc  DEV.md  Dockerfile.dla-landing  ENV.md  Makefile  README.md  README_ENV.md  lerna.json  package.json  setup.py  tsconfig-base.json  version.py
src/cloud/: README.md
src/common/: README.md  package.json
src/components/: README.md  gulpfile.js  package.json  tsconfig.json  typings.d.ts
src/data/: README.md  package.json  setup.py
src/databook/: package.json
src/datalayer/: version.py
src/datalayerctl/: package.json  setup.py
src/dctl/: README.md  package.json  (+1 more)
var/: README.md
(+3287 files in other folders)
