# Copyright (c) 2023-2024 Datalayer, Inc.
# Distributed under the terms of the Modified BSD License.

[build-system]
requires = ["hatchling==1.21.1"]
build-backend = "hatchling.build"

[project]
name = "datalayer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "datalayer_core==1.0.30",
    "datalayer_ui==0.3.18",
    "jupyter_iam==1.2.11",
    "jupyter_kernels==1.2.19",
    "jupyterlab>=4,<5",
]
dynamic = ["version"]

[project.optional-dependencies]
test = []

[project.scripts]

[tool.hatch.version]
path = "datalayer/__version__.py"

[tool.hatch.build]

[tool.hatch.build.targets.sdist]
exclude = [".github", "binder", ".yarn"]

[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build.hooks.version]
path = "datalayer/_version.py"
