# Copyright (c) 2023-2024 Datalayer, Inc.
# Distributed under the terms of the Modified BSD License.

[build-system]
requires = ["hatchling==1.21.1"]
build-backend = "hatchling.build"

[project]
name = "datalayer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "datalayer_core==1.0.33",
    "datalayer_ui==1.0.11",
    "jupyter_contents==0.0.8",
    "jupyter_iam==1.2.12",
    "jupyter_kernels==1.2.20",
    "jupyterlab>=4.4.2,<5",
    "jupyter_ai_agents==0.11.1",
    "jupyter_collaboration==4.0.2",
    "jupyter_docker==0.0.7",
    "jupyter_kubernetes==0.0.5",
]
dynamic = ["version"]

[project.optional-dependencies]
all = [
    "earthdata_mcp_server",
    "jupyter_earth",
    "jupyter_mcp_server",
]
test = []

[project.urls]
Homepage = "https://github.com/datalayer/datalayer"
Documentation = "https://docs.datalayer.tech"
Repository = "https://github.com/datalayer/datalayer"
Issues = "https://github.com/datalayer/datalayer/issues"
Changelog = "https://github.com/datalayer/datalayer/blob/main/CHANGELOG.md"

[project.scripts]

[tool.hatch.version]
path = "datalayer/__version__.py"

[tool.hatch.build]

[tool.hatch.build.targets.sdist]
exclude = [".github", "binder", ".yarn"]

[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.shared-data]
