# Copyright (c) 2023-2024 Datalayer, Inc.
# Distributed under the terms of the Modified BSD License.

[build-system]
requires = ["hatchling==1.21.1"]
build-backend = "hatchling.build"

[project]
name = "datalayer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "datalayer_core",
    "datalayer_ui",
#    "jupyter_ai_agents",
#    "jupyter_collaboration",
#    "jupyter_contents",
#    "jupyter_docker",
    "jupyter_iam",
    "jupyter_kernels",
#    "jupyter_kubernetes",
#    "jupyterlab>=4.4.2,<5",
    "jupyterlab>=4.0.9,<5",
]
dynamic = ["version"]

[project.optional-dependencies]
all = [
    "earthdata_mcp_server",
    "jupyter_earth",
    "jupyter_mcp_server",
]
test = []

[project.urls]
Homepage = "https://github.com/datalayer/datalayer"
Documentation = "https://docs.datalayer.tech"
Repository = "https://github.com/datalayer/datalayer"
Issues = "https://github.com/datalayer/datalayer/issues"
Changelog = "https://github.com/datalayer/datalayer/blob/main/CHANGELOG.md"

[project.scripts]

[tool.hatch.version]
path = "datalayer/__version__.py"

[tool.hatch.build]

# [tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
artifacts = [
    "datalayer/post-install.sh",
]
exclude = [".github", "binder", ".yarn"]

[tool.hatch.build.targets.wheel]
artifacts = [
    "datalayer/post-install.sh",
]

[tool.hatch.build.targets.wheel.shared-data]
